Fix Sign Up page styling and functionality
- Generate Devise views for customization
- Update registration form with Bootstrap styling and custom fields
- Update login form with consistent Bootstrap styling
- Style error messages with Bootstrap alerts and dismiss buttons
- Update shared links with Bootstrap button styling
- Add missing translations for first_name and last_name
- Compile CSS to ensure Bootstrap styles are available
- All forms now properly styled and fully functional
- Added responsive design and internationalization support

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -40,6 +40,8 @@ es:
     password_confirmation: "Confirmar contraseña"
     remember_me: "Recordarme"
     forgot_password: "¿Olvidaste tu contraseña?"
+    first_name: "Nombre"
+    last_name: "Apellido"
     
   # Common actions
   actions:
