--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -69,6 +69,8 @@ en:
     password_confirmation: "Confirm password"
     remember_me: "Remember me"
     forgot_password: "Forgot your password?"
+    first_name: "First name"
+    last_name: "Last name"
     
   # Common actions
   actions:
