--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -23,6 +23,41 @@ es:
     create: "Crear viaje"
     update: "Actualizar viaje"
     delete: "Eliminar viaje"
+    my_trips: "Mis Viajes"
+    new_trip: "Nuevo Viaje"
+    edit_trip: "Editar Viaje"
+    trip_details: "Detalles del Viaje"
+    no_trips: "Aún no hay viajes"
+    no_trips_description: "¡Comienza a planificar tu próxima aventura!"
+    create_first_trip: "Crear Tu Primer Viaje"
+    share_trip: "Compartir Viaje"
+    name: "Nombre del Viaje"
+    description_placeholder: "Describe tu destino y planes de viaje..."
+    status_label: "Estado"
+    make_public: "Hacer este viaje público"
+    public_description: "Los viajes públicos pueden ser vistos por otros usuarios"
+    create_trip: "Crear Viaje"
+    update_trip: "Actualizar Viaje"
+    confirm_delete: "¿Estás seguro de que quieres eliminar '%{name}'?"
+    no_description: "No se proporcionó descripción"
+    visibility: "Visibilidad"
+    public: "Público"
+    private: "Privado"
+    created_at: "Creado"
+    trip_data: "Datos del Viaje"
+    actions: "Acciones"
+    start_planning: "Comenzar Planificación"
+    view_map: "Ver Mapa"
+    export_pdf: "Exportar PDF"
+    feature_coming_soon: "Función próximamente"
+    quick_stats: "Estadísticas Rápidas"
+    days: "Días"
+    segments: "Segmentos"
+    activities: "Actividades"
+    status:
+      planning: "Planificando"
+      active: "Activo"
+      completed: "Completado"
     
   # Chat interface
   chat:
@@ -52,6 +87,8 @@ es:
     back: "Volver"
     next: "Siguiente"
     previous: "Anterior"
+    view: "Ver"
+    show: "Mostrar"
     
   # Messages
   messages:
