feat(maps): Implement interactive route planning via chat
Introduces a real-time, interactive map feature powered by the Google Maps API, allowing users to plan and modify travel routes directly through chat commands.

This feature is primarily driven by the frontend using the `@googlemaps/js-api-loader` package and a Stimulus controller. The backend's role is to persist the current route's state (destinations, mode of transport) within the Trip's `trip_data`.

The AI tool system has been significantly refactored to be context-aware. The AI is now presented with different tools based on whether a route already exists:
- `plan_route`: Creates a new route from scratch.
- `modify_route`: A new tool that intelligently adds or removes stops from the existing route, preventing the AI from losing context on follow-up requests.

The final route object is now also stored in the `ChatMessage`'s metadata, providing a clear historical record of the trip's evolution.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -162,6 +162,8 @@ en:
       planning: "Planning"
       active: "Active"
       completed: "Completed"
+      cancelled: "Cancelled"
+    route_map: "Route Map"
     continue_chat: "Continue Chat"
     trip_info: "Trip Information"
     overview: "Overview"
@@ -197,7 +199,7 @@ en:
     trip_updated: "Trip was successfully updated."
     trip_deleted: "Trip was successfully deleted."
   errors:
-    trip_creation_failed: "Could not create a new trip. Please try again."
+    trip_creation_failed: "Could not create a new trip."
   nav:
     trips: "My Trips"
     profile: "Profile"
